--- a/src/style.css
+++ b/src/style.css
@@ -9,22 +9,21 @@
   src: url(font/sans.ttf);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tilt+Prism&display=swap');
+
 body {
-  padding-top: 150px;
-  width: 510px;
+
   margin: 0 auto;
   background-color: #19172e;
   color: white;
+  font-family: "sans" !important;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Tilt Prism', cursive;
 }
 
-h3 {
-  position: absolute;
-  font-size: 2rem;
-  text-align: center;
-  left: 0;
-  right: 0;
-  top: 0;
-}
+
 
 textarea {
   width: 100%;
@@ -43,29 +42,4 @@ textarea:hover {
 
 textarea:focus {
   border-color: #4d90fe;
-}
-
-.output.row {
-  padding: 80px;
-  font-size: 1.3rem;
-}
-
-.output.row div {
-  text-align: center;
-}
-
-footer {
-  position: absolute;
-  text-align: center;
-  font-size: 1rem;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin-bottom: 0;
-  padding: 5px;
-  line-height: 3vh;
-}
-
-footer a:visited {
-  color: inherit;
 }
