--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ textarea {
   border: 1px solid #d9d9d9;
   border-radius: 5px;
   outline: none;
-  font-size: 1rem;
+  font-size: 20px;
   line-height: 1.5rem;
 }
 
@@ -42,4 +42,20 @@ textarea:hover {
 
 textarea:focus {
   border-color: #4d90fe;
+}
+
+input[type="number"] {
+  width: 50px;
+  height: 30px;
+  text-align: center;
+}
+
+select {
+  height: 50px;
+  height: 30px;
+}
+
+button {
+  outline: 0;
+  border: none;
 }
